# web_api_with_cpp

./: README.md
calculator_back-end/: CMakeLists.txt  CalcResourceFactory.cpp
calculator_back-end/include/: CalcResourceFactory.h  CalcService.h
docker/: docker-compose.yml
docker/config/: auth  mosquitto.conf
